--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,11 @@ dependencies {
 	implementation 'mysql:mysql-connector-java:8.0.32'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
+	// MySQL R2DBC
+	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
+	implementation 'io.asyncer:r2dbc-mysql:1.1.3'
+//	implementation 'dev.miku:r2dbc-mysql'
+
 	// JWT for auth
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
