--- a/build.gradle
+++ b/build.gradle
@@ -37,9 +37,8 @@ dependencies {
 	// starter-webflux includes web-reactive and io.projectreactor-core as well. Thus, it's the largest and only dependency needed for spring reactive
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
-	// Spring Security OAuth
+	// Spring Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
@@ -53,15 +52,12 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
 	// MySQL for auth
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'mysql:mysql-connector-java:8.0.32'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
 	// MySQL R2DBC
 	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
 	implementation 'io.asyncer:r2dbc-mysql:1.1.3'
-//	implementation 'dev.miku:r2dbc-mysql'
 
 	// JWT for auth
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
