--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,15 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+	// Redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.springframework.session:spring-session-data-redis'
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+	compileOnly 'io.lettuce:lettuce-core:6.3.2.RELEASE'
+	testImplementation 'com.github.codemonstur:embedded-redis:1.4.3'
+
 }
 
 tasks.named('test') {
