--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,6 @@ dependencies {
 	testImplementation platform('org.junit:junit-bom:5.9.1')
 	testImplementation 'org.junit.jupiter:junit-jupiter'
 
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 	// starter-webflux includes web-reactive and io.projectreactor-core as well. Thus, it's the largest and only dependency needed for spring reactive
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
@@ -50,6 +49,10 @@ dependencies {
 
 	// Swagger OpenAPI with SpringDocs
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+
+	// MongoDB : Cloud Driver / Reactive Driver
+//	implementation 'org.mongodb:mongodb-driver-sync:5.2.0' // DISABLE because MongoDB Reactive Driver exists
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 
 	// MySQL for auth
 	implementation 'mysql:mysql-connector-java:8.0.32'
@@ -71,6 +74,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
 	compileOnly 'io.lettuce:lettuce-core:6.3.2.RELEASE'
 	testImplementation 'com.github.codemonstur:embedded-redis:1.4.3'
+
+	// Firebase Admin SDK
+	implementation 'com.google.firebase:firebase-admin:9.4.1'
 
 }
 
